--- a/css/themes/jmde.css
+++ b/css/themes/jmde.css
@@ -1,7 +1,7 @@
 /* Theme */
 
 main {
-	background: #314159;
+	/* background: #314159; */
 	color: #7ba2bf;
 }
 
@@ -13,4 +13,23 @@ main {
 .icons-social a svg path{
 	fill: 	#7ba2bf;
 	;
+}
+
+/* ---- particles.js container ---- */
+
+#particles-js{
+	/* background: #314159; */
+	position:fixed;
+	width: 100%;
+	height: 100%;
+    filter: blur(5px);
+	z-index: -10;
+  }
+
+#bg{
+	background: #314159;
+	position:fixed;
+	width: 100%;
+	height: 100%;
+	z-index: -100;
 }
